<resources>
    <string name="app_name">Fleet Manager</string>
    <string name="manager_title">Управление парком</string>
    <string name="manager_subtitle">Контроль ТС, водителей и сервисных событий</string>
    <string name="manager_dashboard_title">Дашборд</string>
    <string name="next_button">Далее</string>
    <string name="next_placeholder_message">Экран-заглушка спринта 1</string>
    <string name="footer_hint">Sova Fleet • Sprint 1</string>
    <string name="kpi_vehicles">Авто</string>
    <string name="kpi_fleets">Парки</string>
    <string name="kpi_companies">Компании</string>
    <string name="kpi_users">Пользователи</string>
    <string name="add_entity">Добавить сущность</string>
    <string name="edit_entity">Редактировать</string>
    <string name="delete_entity">Удалить</string>
    <string name="open_vehicles_list">Открыть список автомобилей</string>
    <string name="open_fleets_list">Открыть список автопарков</string>
    <string name="open_companies_list">Открыть список компаний</string>
    <string name="open_users_list">Открыть список пользователей</string>
    <string name="open_related">Открыть связанные данные</string>
    <string name="search_hint">Поиск</string>
    <string name="filter_all_statuses">Все статусы</string>
    <string name="vehicle_docs_and_specs">Документы и техническая информация</string>
    <string name="cancel">Отмена</string>
    <string name="save">Сохранить</string>
    <string name="add_button_title">+ Добавить</string>
    <string name="add_icon_title">+</string>
    <string name="add_vehicle">Добавить автомобиль</string>
    <string name="add_fleet">Добавить автопарк</string>
    <string name="add_company">Добавить компанию</string>
    <string name="add_user">Добавить пользователя</string>
    <string name="back">Назад</string>
    <string name="vehicle_info_title">Информация об автомобиле</string>
    <string name="entity_details_title">Карточка сущности</string>
    <string name="documents_title">Документы</string>
    <string name="menu_specs">Технические характеристики</string>
    <string name="menu_manual">Руководство пользователя</string>
    <string name="menu_service_contract">Сервисный контракт</string>
    <string name="chevron_right">›</string>
    <string name="status_filter_title">Фильтр статуса</string>
    <string name="status_in_transit">В пути</string>
    <string name="status_parking">Стоянка</string>
    <string name="status_service">Сервис</string>
    <string name="menu">Меню</string>
    <string name="alerts">Уведомления</string>
    <string name="filter_button">Фильтры</string>
    <string name="bottom_nav_vehicles">Автомобили</string>
    <string name="bottom_nav_users">Водители</string>
    <string name="bottom_nav_service">Журналы</string>
    <string name="bottom_nav_truck_icon">🚚</string>
    <string name="bottom_nav_users_icon">👤</string>
    <string name="bottom_nav_service_icon">🔧</string>
    <string name="details_entity">Подробнее</string>
    <string name="service_title">Журналы</string>
    <string name="tab_tickets">Заявки</string>
    <string name="tab_charging">Зарядки</string>
    <string name="ticket_card_title">Карточка заявки</string>
    <string name="charging_card_title">Карточка зарядки</string>
    <string name="service_empty_state">Нет данных для отображения</string>
</resources>
