<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_fleet_screen"
    android:padding="@dimen/fleet_screen_padding">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topSystemInsetGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/fleet_system_top_inset" />

    <TextView
        android:id="@+id/screenTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/service_title"
        android:textAppearance="@style/TextAppearance.Fleet.Title"
        android:textColor="@color/fleet_fg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topSystemInsetGuideline" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/serviceRecycler"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toTopOf="@id/bottomNavBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/screenTitle" />

    <TextView
        android:id="@+id/emptyStateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/service_empty_state"
        android:textAppearance="@style/TextAppearance.Fleet.Subtitle"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/serviceRecycler"
        app:layout_constraintEnd_toEndOf="@id/serviceRecycler"
        app:layout_constraintStart_toStartOf="@id/serviceRecycler"
        app:layout_constraintTop_toTopOf="@id/serviceRecycler" />

    <LinearLayout
        android:id="@+id/bottomNavBar"
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_fleet_card"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingHorizontal="10dp"
        android:weightSum="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/navVehicles"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bottom_nav_truck_icon"
                android:textColor="@color/fleet_muted_fg"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/bottom_nav_vehicles"
                android:textAppearance="@style/TextAppearance.Fleet.Caption" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/navUsers"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bottom_nav_users_icon"
                android:textColor="@color/fleet_muted_fg"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/bottom_nav_users"
                android:textAppearance="@style/TextAppearance.Fleet.Caption" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/navService"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bottom_nav_service_icon"
                android:textColor="@color/fleet_primary"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/bottom_nav_service"
                android:textAppearance="@style/TextAppearance.Fleet.Caption" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
